GF23063: 6th pass at creating a template based environment for web pages. * Fixed header spacing problem when displaying its images.
SVN-Revision: 468

--- a/software/ncireportwriter/web/css/styleSheet.css
+++ b/software/ncireportwriter/web/css/styleSheet.css
@@ -514,11 +514,6 @@ body
  width: 383px;
 }
 
-.print-header
-{
- display: none;
-}
-
 .footer
 {
  border-top-color: #9999b3;
